Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40866

QWebSocketServer sends invalid Date header in handshake response

    XMLWordPrintable

Details

    • 7aeea581882425be657123d2945c7165c7063aab

    Description

      This makes it not work if system locale is set to something that has day names (possibly with non ascii?) characters. Date field is actually defined in rfc2616, section 14.18:
      http://www.w3.org/Protocols/rfc2616/rfc2616.txt

      Currently it returns localized datetime string.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes