Fix invalid Date header field in handshake response

Fix invalid Date header in handshake response on systems with non-
english system locale.

Task-number: QTBUG-40866
Change-Id: If6d5cc55e879eff259698e87c9cda753990245e7
Reviewed-by: Kurt Pattyn <pattyn.kurt@gmail.com>